# cdv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
data/fonts/ttf/: .uuid
doc/: cdv.md  color.md  colors.md  elem.md  examples.md  fig.md  frames.md  scl.md  tutorial.md
include/cdv/back_end/: cairo.hpp
include/cdv/core/: date_io.hpp  rgba_color.hpp  units.hpp  vec2.hpp
include/cdv/core/color/: categorical_schemes.hpp  cividis_interpolator.hpp  css4.hpp  cyclical.hpp  diverging_interpolators.hpp  generated_schemes.hpp  interpolator.hpp  multi_hue_interpolators.hpp  perceptually_uniform_interpolators.hpp  sinebow_interpolator.hpp  single_hue_interpolators.hpp  tableau.hpp  turbo_interpolator.hpp
include/cdv/elem/: arc.hpp  area.hpp  axis.hpp  color_legend.hpp  fill_properties.hpp  line.hpp  line_properties.hpp  pie_slices.hpp  range_stack.hpp  rectangle.hpp  scatter.hpp  swatch_legend.hpp  symbol.hpp  symbol_properties.hpp  text.hpp  text_properties.hpp
include/cdv/elem/detail/: draw_line_markers.hpp  draw_markers.hpp  draw_polygonal_markers.hpp  draw_rectangle.hpp  draw_round_markers.hpp  legend.hpp
include/cdv/fig/: draw.hpp  frame.hpp  frame_dimensions.hpp  render_surface.hpp  render_svg.hpp
include/cdv/fnt/: font_properties.hpp  font_weights.hpp  freetype.hpp  text_shaper.hpp
include/cdv/scl/: band_scale.hpp  linear_scale.hpp  log_scale.hpp  ordinal_scale.hpp  point_scale.hpp  sequential_scale.hpp  ticks.hpp  time_scale.hpp
include/cdv/stdx/: concepts.hpp  date.hpp  date_io.hpp  functional.hpp  generator.hpp  numbers.hpp
mdsource/: README.md
mdsource/doc/: color.md  colors.md  core.md  elem.md  examples.md  fig.md  fnt.md  frames.md  scl.md  tutorial.md
src/: CMakeLists.txt
src/back_end/: cairo.cpp
src/core/: rgba_color.cpp
src/fnt/: font_weights.cpp  freetype.cpp  freetype_error.cpp  freetype_error.hpp  mfl_font_face.cpp  mfl_font_face.hpp  text_shaper.cpp
tests/approval_tests/: CMakeLists.txt  main.cpp
tests/approval_tests/cdv/elem/: axis.cpp  color_legend.cpp  lines.cpp  swatch_legend.cpp  symbols.cpp
tests/approval_tests/cdv/fig/: area_charts.cpp  bar_charts.cpp  fig.cpp  heatmaps.cpp  line_charts.cpp  pie_charts.cpp  scatter_charts.cpp  tutorial.cpp
tests/approval_tests/framework/: approval_tests.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/core/: rgba_color.cpp  vec2.cpp
tests/unit_tests/core/color/: interpolator.cpp
tests/unit_tests/elem/: arc.cpp  area.cpp  axis.cpp  color_legend.cpp  draw_line_markers.cpp  draw_polygonal_markers.cpp  draw_round_markers.cpp  line.cpp  pie_slices.cpp  range_stack.cpp  rectangle.cpp  scatter.cpp  swatch_legend.cpp  symbol.cpp  text.cpp
tests/unit_tests/fig/: frame.cpp
tests/unit_tests/fnt/: font_properties.cpp  font_weights.cpp  freetype.cpp  text_shaper.cpp
tests/unit_tests/scl/: band_scale.cpp  linear_scale.cpp  log_scale.cpp  ordinal_scale.cpp  point_scale.cpp  sequential_scale.cpp  ticks.cpp  time_scale.cpp
tests/unit_tests/test/: mock_surface.hpp  util.hpp
